# tauri-media-player

./: .gitignore  README.md  drizzle.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: bg.html
src/: App.tsx  index.css  main.tsx  nativewindow.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_married_marauders.sql  0000_right_red_shift.sql  0000_secret_lucky_pierre.sql  0001_silly_tiger_shark.sql  0002_many_dreadnoughts.sql  0003_boring_bloodstrike.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
src-tauri/src/: _dynamic_win_workingish_main.rs  _workingish_main.rs  main.rs  metadata.rs  mpv.rs  mpv_tauri_commands.rs  utils.rs  winapi_abstraction.rs  winapi_window_abstraction.rs
src/components/: DraggableList.tsx  DraggableSimplePlaylist.tsx  EnhancedPlaylistTable.tsx  MPVWindowProxy.tsx  MpvPlayerWindow.tsx  NativeWindow.tsx  NativeWindowProxy.tsx  PlayerContextMenu.tsx  PlayerControl.tsx  Playlist.tsx  PlaylistContainerContextMenu.tsx  PlaylistItem.tsx  PlaylistItemContextMenu.tsx  PlaylistList.tsx  PlaylistListItem.tsx  PlaylistViewModeToggleGroup.tsx  SimpleDndPlaylist.tsx  SimplePlaylistItem.tsx  TrackSideDetails.tsx
src/components/old_stuff/: MpvPlayerWindow.tsx  NativeWindow.tsx
src/components/ui/: player-context-menu.tsx  player-control.tsx  tittled-scroll-area.tsx
src/db/: database.ts  migrate.ts  schema.ts  types.ts
src/hooks/: use-mouse-activity.ts  use-mpv-player.ts  use-mpv-player.tsx  use-tauri-window.ts
src/lib/: utils.ts
src/routes/: app.tsx  error.tsx  focused-player.tsx  playlist.tsx  root.tsx
src/services/: MediaInfo.ts  Metadata.ts  MpvPlayer.ts  PlaylistEntrySvc.ts  PlaylistManager.ts  PlaylistSvc.ts
src/stores/: mpv-player-info.ts  view-states.ts
