[package]
name = "tauri-media-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-max-size", "window-set-size", "window-set-min-size", "window-set-position", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


winit = "0.30.5"
libloading = "0.7"
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
lazy_static = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.7"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
